--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,18 +15,22 @@ dependencies:
   
   # Icons
   cupertino_icons: ^1.0.8
-  font_awesome_flutter: ^10.5.0
+  iconsax: ^0.0.8
 
   # Utility
-  rounded_loading_button: ^2.1.0
+  http: ^1.1.0
+  intl: ^0.19.0
+  logger: ^2.4.0
+  url_launcher: ^6.2.4
+  flutter_native_splash: ^2.3.7
   responsive_sizer: ^3.1.1
   smooth_page_indicator: ^1.1.0
-  page_transition: "^2.0.9"
-  flutter_chat_ui: ^1.6.9
-  animated_bottom_navigation_bar: ^1.2.0
+  connectivity_plus: ^5.0.0
+  change_app_package_name: ^1.4.0
 
   # State Management
   get: ^4.6.6
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
