--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images
+    - assets/images/
+    - assets/logos/
 
   fonts:
     - family: "OpenSans"
