--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   connectivity_plus: ^5.0.0
   change_app_package_name: ^1.4.0
+  shared_preferences: ^2.3.2
 
   # State Management
   get: ^4.6.6
