--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,12 @@ dependencies:
   connectivity_plus: ^5.0.0
   change_app_package_name: ^1.4.0
   shared_preferences: ^2.3.2
+  carousel_slider: ^5.0.0
 
   # State Management
   get: ^4.6.6
   get_storage: ^2.1.1
+  flutter_iconly: ^1.0.2
 
 dev_dependencies:
   flutter_test:
