--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   flutter_iconly: ^1.0.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
