--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="medics"
+        android:label="TB-R"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
