--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   change_app_package_name: ^1.4.0
   shared_preferences: ^2.3.2
   carousel_slider: ^5.0.0
+  google_sign_in: ^6.2.1
 
   # State Management
   get: ^4.6.6
