--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   shared_preferences: ^2.3.2
   carousel_slider: ^5.0.0
   google_sign_in: ^6.2.1
+  cached_network_image: ^3.4.1
+  flutter_widget_from_html: ^0.15.2
+  flutter_svg: ^2.0.10+1
 
   # State Management
   get: ^4.6.6
