--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_widget_from_html: ^0.15.2
   flutter_svg: ^2.0.10+1
+  flutter_inappwebview: ^6.1.5
 
   # State Management
   get: ^4.6.6
