--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   flutter_widget_from_html: ^0.15.2
   flutter_svg: ^2.0.10+1
   flutter_inappwebview: ^6.1.5
+  flutter_local_notifications: ^17.2.3
+  timezone: ^0.9.4
+  android_alarm_manager_plus: ^4.0.4
+  permission_handler: ^11.3.1
 
   # State Management
   get: ^4.6.6
@@ -53,6 +57,7 @@ flutter:
   assets:
     - assets/images/
     - assets/logos/
+    - assets/sounds/
 
   fonts:
     - family: "OpenSans"
