alarm but if delete in background cannot set alarm for next schedule

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   flutter_widget_from_html: ^0.15.2
   flutter_svg: ^2.0.10+1
   flutter_inappwebview: ^6.1.5
-  # flutter_local_notifications: ^17.2.3
+  flutter_local_notifications: ^17.2.3
   timezone: ^0.9.4
   # android_alarm_manager_plus: ^4.0.4
   permission_handler: ^11.3.1
