--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   timezone: ^0.9.4
   # android_alarm_manager_plus: ^4.0.4
   permission_handler: ^11.3.1
+  lottie: ^3.1.3
   # auto_start_flutter: ^0.1.1
   alarm: ^4.0.4
   shimmer: ^3.0.0
